--- a/NetPCTest.API/appsettings.json
+++ b/NetPCTest.API/appsettings.json
@@ -1,9 +1,20 @@
 {
+  "JwtSettings": {
+    "Issuer": "testIssuer",
+    "Audience": "testAudience",
+    "SecretKey": "testKeyVERY!@VERY!@SECRET!!!@@@CXZACS"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NetPcDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DockerConnection": "Server=db;Database=TestForum;User Id=sa;Password=zaq1@WSX;"
+  }
 }
